--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,9 @@
 .home {
     border: 0px;
+    --padding-home: 100px; 
+    /* padding-left: var(--padding-home);
+    padding-right: var(--padding-home); */
+    --home-width : 950px;
+    --label-color: #808080; 
 }
+
