finished product list

--- a/src/components/home/bottomSections/bottomSections.css
+++ b/src/components/home/bottomSections/bottomSections.css
@@ -27,6 +27,10 @@
 .selection-tab:first-child{
     border: 1px solid #a0a0a0;
 }
+.selection-tab:nth-child(2){
+    background-color:#5840BA ;
+    color: white;
+}
 .selection-tab:last-child{
     border: 1px solid #a0a0a0;
     margin-left: auto;
