--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
     height: 150px;
     align-items: center;
     --nav-color : #424242;
-    --nav-focus : #ff2200; 
+    --nav-focus : #FC5E3B; 
 }
 .nav-logo{
     /* border: 1px dashed grey; */
