--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,10 +1,20 @@
 .navbar{
     /* border: 1px dashed grey; */
     display: flex;
-    height: 150px;
+    height: 70px;
     align-items: center;
     --nav-color : #424242;
     --nav-focus : #FC5E3B; 
+    z-index: 999;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 100px;
+    right: 100px;
+}
+.navbar-shadow{
+    /* transition: box-shadow 1s ease-in-out; */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .nav-logo{
     /* border: 1px dashed grey; */
