--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,16 +1,22 @@
 .navbar{
     /* border: 1px dashed grey; */
-    display: flex;
-    height: 70px;
-    align-items: center;
     --nav-color : #424242;
     --nav-focus : #FC5E3B; 
     z-index: 999;
     background-color: white;
     position: fixed;
     top: 0;
-    left: 100px;
-    right: 100px;
+    left: 0px;
+    right: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.navbar1{
+    display: flex;
+    height: 70px;
+    align-items: center;
+    max-width: 1300px;
+    margin: auto;
 }
 .navbar-shadow{
     /* transition: box-shadow 1s ease-in-out; */
@@ -18,7 +24,7 @@
 }
 .nav-logo{
     /* border: 1px dashed grey; */
-    margin-right: 300px;
+    margin-right: 30px;
     text-decoration: none;
 }
 .nav-logo > h1{
@@ -31,26 +37,14 @@
     font-weight: 500;
     color: var(--nav-color);
 }
-.nav-search-area{
-    border: 1px solid #b9b9b9;
-    height: 50px;
+.nav-tab:nth-child(2){
+    border-left: 1px solid #d2d2d2;
     display: flex;
-    overflow: hidden;
-    border-radius: 50px;
-    padding-left: 15px;
-    width: 200px;
-    margin-right: 40px;
-    margin-left: 100px;
-    color: var(--nav-color);
+    align-items: center;
+    height: 30px;
+    padding-left: 30px;
 }
-.nav-search-area > input {
-    outline: none;
-    border: 0;
-}
-.nav-search-area > div{
-    padding-top: 13px;
-    margin-right: 5px;
-}
+
 .nav-tab:last-child{
     margin-right: 100px;
 }
@@ -68,4 +62,40 @@
 }
 .nav-tab:focus{
     color:var(--nav-focus)
+}
+.nav-right-area{
+    /* border: 1px dashed grey; */
+    width: 300px;
+    height: 50px;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+.nav-right-area > div{
+    display: flex;
+    width: 100;
+    margin-left: auto;
+}
+.nav-right-btn{
+    /* border: 1px dashed grey; */
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 10px;
+    border-radius: 7px;
+    display: flex;
+    font-weight: 500;
+    cursor: pointer;
+}
+.nav-right-btn:first-child{
+    color : var(--nav-focus)
+}
+.nav-right-btn:last-child{
+    background-color: var(--nav-focus);
+    color: white;
+    padding-right: 20px;
+}
+.btn-icon:first-child{
+    /* border: 1px dashed grey; */
+    margin-right: 5px;
 }
