--- a/src/components/outlet/outlet.css
+++ b/src/components/outlet/outlet.css
@@ -2,6 +2,9 @@
     max-width: 1300px;
     margin: auto;
     padding-top: 70px;
+    padding-left: 30px;
+    padding-right: 30px;
+    /* padding-top: 70px */
 }
 main{
     border: 0px dashed grey;
