--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
 }
 .mid-section-card{
-    border-radius: 7px;
+    border-radius: 15px;
     height: 150px;
     width: 200px;
     display: flex;
@@ -18,5 +18,30 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.076);
+    transition: box-shadow .3s ease;
+    font-weight: 500;
+}
+.card-icon{
+    /* border: 1px dashed grey; */
+    background-color: #ffece8;
+    border-radius: 30px;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    color: #FC5E3B;
+    text-decoration: none;
+    outline: none;
+    transition: background-color 0.3s ease, color 0.3s ease
+}
+.card-icon.active-icon{
+    background-color: #FC5E3B;
+    color: white;
+    /* transition: background-color .3s ease-in-out; */
+}
+
+.mid-section-card:hover{
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.154);
 }
