--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -8,6 +8,7 @@
 .mid-section-cards{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 .mid-section-card{
     border-radius: 15px;
@@ -45,3 +46,57 @@
 .mid-section-card:hover{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.154);
 }
+.mid-section-home-cards{
+    display: flex;
+    justify-content: space-between;
+    --card-width : 200px; 
+}
+.home-card{
+    /* border: 1px dashed grey; */
+    padding: 20px;
+    text-align: center;
+    width: 380px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.025);
+    transition: .3s;
+}
+.home-card:hover{
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.143);
+}
+.home-card > img{
+    width: 280px;
+}
+.home-card > h5{
+    font-size: 25px;
+    line-height: 30px;
+    /* border: 1px dashed grey; */
+    margin: 0;
+    margin-bottom: 10px;
+}
+.home-card > div{
+    --padding-side : 20px;
+    padding-left: var(--padding-side);
+    padding-right: var(--padding-side);
+    margin-bottom: 15px;
+    font-weight: 500;
+    font-size: 14px;
+    color: #707070;
+}
+.home-card-btn{
+    height: 45px;
+    width: 150px;
+    font-weight: 700;
+    font-size: 17px;
+    background-color: white;
+    border: 1px solid #FC5E3B;
+    color: #FC5E3B;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease
+}
+.home-card-btn.active-home-card{
+    background-color: #FC5E3B;
+    color: white;
+}
+
