--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -50,6 +50,7 @@
     display: flex;
     justify-content: space-between;
     --card-width : 200px; 
+    margin-bottom: 60px;
 }
 .home-card{
     /* border: 1px dashed grey; */
@@ -98,5 +99,141 @@
 .home-card-btn.active-home-card{
     background-color: #FC5E3B;
     color: white;
+}
+.mid-section-top-offers{
+    display: flex;
+    justify-content: space-between;
+}
+.product-card{
+    /* border: 1px dashed grey; */
+    height: 415px; 
+    width: 310px;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0px 2px 4px #0000000e;
+    transition: .3s;
+    position: relative;
+}
+.product-card:hover{
+    box-shadow: 0px 2px 10px #00000022;
+}
+.product-img{
+    /* border: 1px dashed; */
+    margin-bottom:10px;
+    position: relative;
+    height: 220px;
+    overflow: hidden;
+    background-color: #f4f4f4;
+}
+.product-img-background{
+    width: 100%;
+    padding: 20px;
+    /* height: ; */
+    display: flex;
+    transition: .3s;
+    background-color: #00000000;
+    height: 100%;
+    transition: .25s;
+}
+.product-img-background.product-img-active{
+    background-color: #0000001c;
+}
+.product-fav{
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff00;
+    color: #fc5e3b00;
+    transition: .25s;
+}
+.product-fav.product-fav-active{
+    background-color: white;
+    color: #fc5e3b;
+
+}
+.product-img-labels{
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    width: 90px;
+    height: 100px;
+    margin-right: 140px;
+}
+.product-img-label-green, .product-img-label-red, .product-img-label-blue {
+    display: flex;
+    align-items: center;
+    height: 25px;
+    border-radius: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: 600;
+    font-size: 13px;
+    color: white;
+    margin-bottom: 5px;
+    background-color: #36d3a1;
+}
+.product-img-label-blue{
+    background-color: #3c76f2;
+}
+.product-img-label-red{
+    background-color: #f23c49;
+}
+.card-label{
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+.card-label:nth-child(1){
+    font-size: 12px;
+    color: #FC5E3B;
+}
+.card-label:nth-child(2){
+    font-size: 17px;
+    font-weight: 700;
+    color: #3e3e3e;
+    transition: .25s;
+}
+.card-label:nth-child(2).card-label-active{
+    color: #FC5E3B;
+}
+.card-label:nth-child(3){
+    font-size: 15px;
+    color: #a0a0a0;
+}
+.card-label:nth-child(4){
+    /* border: 1px dashed grey; */
+    display: flex;
+    align-items: center;
+    color: #636363;
+    margin-bottom: 20px;
+}
+.card-label:nth-child(4)> div{
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.card-label:nth-child(5){
+    border-top: 1px solid #cdcdcd;
+    padding-top: 15px;
+}
+.card-label:nth-child(5) > div{
+    /* border: 1px dashed grey; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 140px;
+    margin: auto;
+}
+.card-label:nth-child(5)>div > div{
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: #afafaf;
+}
+.card-label:nth-child(5)>div>div > div{
+    margin-right: 5px;
 }
 
