--- a/src/components/outlet/outlet.css
+++ b/src/components/outlet/outlet.css
@@ -1,9 +1,9 @@
 .outlet {
-    max-width: 1300px;
+    
     margin: auto;
     padding-top: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
+    /* padding-left: 30px;
+    padding-right: 30px; */
     /* padding-top: 70px */
 }
 main{
