--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -35,6 +35,7 @@
     color: #FC5E3B;
     text-decoration: none;
     outline: none;
+    margin-bottom: 10px;
     transition: background-color 0.3s ease, color 0.3s ease
 }
 .card-icon.active-icon{
