--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -153,7 +153,7 @@
     justify-content: center;
 }
 .ios-app-section{
-    /* border: 1px dashed grey; */
+    border: 0px dashed grey;
 }
 .ios-app-section:nth-child(1){
     width: 20%;
