catalog edit, added bootstrap as well

--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -4,6 +4,7 @@
     --mid-s3-height : 430px; 
     /* margin-top: 30px; */
     margin-bottom: 40px;
+    /* border: 1px dashed grey; */
 }
 .mid-section-cards{
     display: flex;
@@ -13,7 +14,7 @@
 .mid-section-card{
     border-radius: 15px;
     height: 150px;
-    width: 200px;
+    width: 190px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -105,11 +106,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    /* border: 1px dashed grey; */
 }
 .product-card{
     /* border: 1px dashed grey; */
     height: 415px; 
-    width: 310px;
+    width: 295px !important;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
