--- a/src/components/productlist/productlist.css
+++ b/src/components/productlist/productlist.css
@@ -1,24 +1,57 @@
 .product-list{
     /* border: 1px dashed grey; */
     position: relative;
+    /* margin-bottom: 50px; */
+    min-height: 100vh;
+    display: flex;
+    position: relative;
 }
 
-.product-list-area{
-    /* border: 1px dashed grey; */
-    /* padding: 5px; */
-    position: relative;
+.product-list-sidebar{
+    border-right: 1px solid #d6d6d6;
+    /* border-top: 1px solid #d6d6d6; */
+    width: 25%;
+    height: 90vh;
+    /* box-shadow: 15px -15px  rgba(0, 0, 0, 0.175); */
 }
-.home-product1{
+.sidebar-section {
     /* border: 1px dashed grey; */
     width: 280px;
-    height: 460px;
-    position: relative;
+    margin: auto;
+    margin-bottom: 20px;
 }
-.home-productList1{
+.sidebar-section:nth-child(1){
+    /* border: 1px dashed grey; */
+    height: 100px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /* margin-bottom: 20px; */
+    justify-content: space-evenly;
+    align-items: center; 
+    border-bottom: 1px solid #dcdcdc;
+
+}
+.sidebar-section-a{
+    height: 45px;
+    width: 120px;
+    text-transform: none;
+    background-color: #ededed;
+    /* box-shadow: 0px 0px 5px #00000005; */
+    color: #555555;
+    font-size: 16px;
+    border-radius: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: .3s;
+    /* font-weight: 500; */
+}
+.sidebar-section-active{
+    background-color: white;
+    box-shadow: 0px 3px 8px #00000019;
+    color: #FC5E3B;
+}
+.sidebar-section:nth-child(1)> div> div{
+    padding-left: 5px;
 }
 
 .pagination {
@@ -27,4 +60,71 @@
     width: 330px;
     color: #5840BA;
     /* font-weight: 500!important; */
+}
+.sidebar-section > h2{
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 20px;
+}
+.sidebar-section>select{
+    width: 100%;
+    height: 45px;
+    border-radius: 10px;
+    outline: none;
+    box-shadow: none;
+    cursor: pointer;
+    margin-bottom: 10px;
+    border: 2px solid #e6e6e6;
+}
+/* .sidebar-section > select:focus{ */
+    /* border: none; */
+    /* box-shadow: 0px 0px 4px #FC5E3B; */
+    /* outline: none; */
+/* } */
+/* .sidebar-section > select:left{ */
+    /* outline: none; */
+/* } */
+.sidebar-section > div > input[type='checkbox']{
+    margin-right: 7px;
+    border: 2px solid #c2c2c2;
+    transition: .3s;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: white;
+    box-shadow: none;
+    cursor: pointer;
+}
+.sidebar-section > div > input[type="checkbox"]:checked{
+    background-color:#FC5E3B;
+    border: 2px solid #FC5E3B; 
+}
+.sidebar-section > div > label{
+    cursor: pointer;
+    color: #6c6c6c;
+}
+.sidebar-section:nth-child(4) > div{
+    /* border: 1px dashed grey; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sidebar-section:nth-child(4) > div >  span {
+    height: 2px;
+    width: 10px;
+    margin: 0px 5px 0px 5px;
+    border-radius: 10px; 
+    background-color: #b0b0b0;
+}
+.sidebar-section:nth-child(4) > div> input[type="number"]{
+    width: 40%;
+    border: 1px solid #c6c6c6;
+    border-radius: 5px;
+    height: 35px;
+    padding-left: 15px;
+    outline: none;
+    outline-style: none;
+    margin-left: 2px;
+    font-family: inherit;
+    color: #555555;
 }
