--- a/src/components/productlist/productlist.css
+++ b/src/components/productlist/productlist.css
@@ -33,7 +33,7 @@
     height: 45px;
     width: 120px;
     text-transform: none;
-    background-color: #ededed;
+    background-color: #f2f2f2;
     /* box-shadow: 0px 0px 5px #00000005; */
     color: #555555;
     font-size: 16px;
