edit product list

--- a/src/components/productlist/productlist.css
+++ b/src/components/productlist/productlist.css
@@ -8,7 +8,6 @@
 }
 
 .product-list-sidebar{
-    border-right: 1px solid #d6d6d6;
     /* border-top: 1px solid #d6d6d6; */
     width: 25%;
     height: 90vh;
@@ -54,13 +53,7 @@
     padding-left: 5px;
 }
 
-.pagination {
-    /* border: 1px dashed white; */
-    margin-left: auto !important;
-    width: 330px;
-    color: #5840BA;
-    /* font-weight: 500!important; */
-}
+
 .sidebar-section > h2{
     margin-bottom: 20px;
     font-weight: 700;
@@ -127,4 +120,60 @@
     margin-left: 2px;
     font-family: inherit;
     color: #555555;
+}
+.product-list-products{
+    padding-top: 30px;
+    border-left: 1px solid #d6d6d6;
+    margin-top: 30px;
+    height: 90vh;
+    padding-left: 60px;
+    /* border: 1px dashed grey; */
+    width: 75%;
+    padding-right: 30px;
+}
+.product-list-products > h1 {
+    font-weight: 500;
+    font-size: 35px;
+}
+.product-sort{
+    /* border: 1px dashed grey; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 15px;
+    color: #848484;
+    margin-bottom: 30px;
+    /* cursor: pointer; */
+}
+.product-sort > span {
+    height: 1px;
+    border-radius: 6px;
+    width: 680px;
+    background-color: #d7d7d7;
+    /* cursor: pointer; */
+}
+.sort-item > select, .sort-item:nth-child(1){
+    cursor: pointer;
+}
+.product-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 20px;
+    /* border: 1px dashed grey; */
+}
+.product-cards > div{
+    /* margin-right: 26px; */
+    margin-bottom: 30px;
+}
+
+.pagination {
+    /* border: 1px dashed white; */
+    /* margin-left: auto !important; */
+    width: 330px;
+    color: #5840BA;
+    /* font-weight: 500!important; */
 }
