--- a/src/components/home/midSections/midSections.css
+++ b/src/components/home/midSections/midSections.css
@@ -111,7 +111,7 @@
 .product-card{
     /* border: 1px dashed grey; */
     height: 415px; 
-    width: 295px !important;
+    width: 295px;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
@@ -145,7 +145,7 @@
 }
 .product-fav{
     width: 40px;
-    height: 40px;
+    height: 36px;
     border-radius: 40px;
     display: flex;
     align-items: center;
