--- a/src/components/product/productView.css
+++ b/src/components/product/productView.css
@@ -1,9 +1,10 @@
 .productView {
-    border: 1px dashed grey; 
+    /* border: 1px dashed grey;  */
     min-height: 100vh;
     max-width: 1300px;
     margin: auto;
     padding-top: 20px;
+    margin-bottom: 50px;
 }
 .productView > h1 {
     font-size: 35px;
@@ -57,6 +58,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.209) ;
+    cursor: pointer;
 }
 .productView-grid{
     /* border: 1px dashed grey; */
@@ -101,6 +103,9 @@
     display: flex;
     justify-content: space-between;
 }
+.productView-grid-container{
+    margin-bottom: 40px;
+}
 .productView-labels1 > div {
     width: 240px;
     background-color: #eaeaea;
@@ -112,7 +117,117 @@
 .productView-labels1 > div:hover{
     background-color: #dadada;
 } 
-.productView-grid-container{
+
+.productView-desc {
     /* border: 1px dashed grey; */
+    display: flex;
+    min-height: 300px;
+    justify-content: space-between;
+}
+.productView-desc-side{
+    height: 100%;
+}
+.productView-desc-side:nth-child(1){
+    /* border: 1px dashed grey; */
+    width: 62%;
+}
+.productView-desc-side:nth-child(2){
+    /* border: 1px dashed grey; */
+    width: 30.5%;
+}
+.productView-desc-side-label:nth-child(1){
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.125);
+    width: 100%;
+    padding: 30px;
+    /* height: 400px; */
+}
+.productView-side-label-header{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    color: #656565;
+    margin-bottom: 10px;
+}
+.prod-vw-sd-lb-h {
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.163);
+    margin-left: 15px;
+}
+.productView-desc-side-label {
+    border: 1px dashed grey;
+}
+.productView-desc-side-label > h3 {
+    font-size: 18px;
 }
 
+.agent-contacts{
+    /* border: 1px dashed grey; */
+    display: flex;
+    font-weight: 400;
+    font-size: 17px;
+    align-items: center;
+    color: #656565;
+    cursor: pointer;
+    transition: .2s;
+    margin-bottom: 3px;
+}
+.agent-contacts:hover{
+    color: #343434;
+}
+.agent-contacts:nth-child(2){
+    border: 1px dashed grey;
+}
+input[type="text"]{
+    height: 45px;
+    border: 2px solid #d9d9d9 !important;
+    margin-bottom: 15px;
+}
+textarea{
+    border: 2px solid #d9d9d9 !important;
+    resize: none;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+.agent-send-btn{
+    width: 100%;
+    height: 50px;
+    color: white;
+    background-color: #FC5E3B;
+    border-radius: 5px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    cursor: pointer;
+}
+input[type='checkbox']{
+    margin-right: 7px;
+    border: 2px solid #c2c2c2;
+    transition: .3s;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: white;
+    box-shadow: none;
+    cursor: pointer;
+}
+input[type="checkbox"]:checked{
+    background-color:#FC5E3B;
+    border: 2px solid #FC5E3B; 
+}
+.label1{
+    font-size: 14px;
+    color: #656565;
+}
+    /* margin-bottom: 20px; */
+/* } */
