--- a/src/components/product/productView.css
+++ b/src/components/product/productView.css
@@ -128,7 +128,7 @@
     height: 100%;
 }
 .productView-desc-side:nth-child(1){
-    /* border: 1px dashed grey; */
+    border: 1px dashed grey;
     width: 62%;
 }
 .productView-desc-side:nth-child(2){
@@ -229,5 +229,24 @@ input[type="checkbox"]:checked{
     font-size: 14px;
     color: #656565;
 }
-    /* margin-bottom: 20px; */
-/* } */
+.prod-labels{
+    /* width: 400px; */
+    display: flex;
+    margin-bottom: 10px;
+    /* justify-content: space-between; */
+}
+.prod-labels > div {
+    margin-right: 10px;
+}
+.prod-price{
+    font-weight: 700;
+    font-size: 27px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #d7d7d7;
+}
+.prod-price > span {
+    font-size: 15px;
+    color: #9e9e9e;
+    font-weight: 500;
+}
