--- a/src/components/product/productView.css
+++ b/src/components/product/productView.css
@@ -128,7 +128,7 @@
     height: 100%;
 }
 .productView-desc-side:nth-child(1){
-    border: 1px dashed grey;
+    /* border: 1px dashed grey; */
     width: 62%;
 }
 .productView-desc-side:nth-child(2){
@@ -238,15 +238,40 @@ input[type="checkbox"]:checked{
 .prod-labels > div {
     margin-right: 10px;
 }
-.prod-price{
-    font-weight: 700;
+.prod-desc-title{
+    font-weight: 600;
     font-size: 27px;
-    padding-bottom: 20px;
-    margin-bottom: 30px;
-    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 10px;
+
 }
-.prod-price > span {
-    font-size: 15px;
-    color: #9e9e9e;
-    font-weight: 500;
+.prod-desc-title:nth-child(2){
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #e7e7e7;
+}
+.prod-desc-title > span {
+    color: #656565;
+    font-weight: 400;
+    font-size: 17px;
+}
+.prod-desc-title:nth-child(3){
+    /* border-bottom: 1px dashed red; */
+    border: 0;
+}
+.prod-desc-txt{
+    color: #656565;
+    font-weight: 400;
+    font-size: 17px;
+    margin-bottom: 20px;
+}
+.prod-desc-detail{
+    color: #545454;
+    font-weight: 700;
+    font-size: 17px;
+    margin-bottom: 5px;
+}
+.prod-desc-detail > span{
+    color: #656565;
+    font-weight: 400;
+    font-size: 17px;
 }
