--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -69,16 +69,20 @@
     align-items: center;
 }
 .nav-right-area > div{
+    /* border: 1px dashed grey; */
     display: flex;
     width: 100;
     margin-left: auto;
+    align-items: center;
+    justify-content: space-between;
 }
 .nav-right-btn{
     /* border: 1px dashed grey; */
-    padding: 5px;
+    height: 40px;
+    align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     border-radius: 7px;
     display: flex;
     font-weight: 500;
